apparently this should fix the footer on mobile and the logo hopefully

--- a/css/header.css
+++ b/css/header.css
@@ -57,6 +57,7 @@
 
     .siteHeader__text {
         text-align: center;
+        font-size: 0.8em;
     }
 
     .siteHeader nav {
